fix z-index for slideshow

--- a/src/components/SlideShow/SlideShow.css
+++ b/src/components/SlideShow/SlideShow.css
@@ -7,6 +7,7 @@
   height: 100%;
   top: 0;
   background-color: rgba(0, 0, 0, 0.7);
+  z-index: 1;
 }
 
 .slide-show {
